<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_container_item_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/image_view_poster_movie"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/title_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/poster"
        android:layout_toRightOf="@+id/poster"
        android:text="@string/title_movie"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/vote_average_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_movie"
        android:layout_toEndOf="@+id/poster"
        android:layout_toRightOf="@+id/poster"
        android:contentDescription="@string/image_view_vote_average"
        android:src="@drawable/ic_start_pink_24dp" />

    <TextView
        android:id="@+id/vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_movie"
        android:layout_toEndOf="@+id/vote_average_image"
        android:layout_toRightOf="@+id/vote_average_image"
        android:text="@string/_0_0"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/release_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vote_average_image"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/poster"
        android:layout_toRightOf="@+id/poster"
        android:text="@string/release_date"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/release_date_label"
        android:layout_toEndOf="@+id/poster"
        android:layout_toRightOf="@+id/poster"
        android:text="@string/release_date_value" />

    <TextView
        android:id="@+id/overview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/release_date"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/poster"
        android:layout_toRightOf="@+id/poster"
        android:text="@string/overview"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overview_label"
        android:layout_toEndOf="@+id/poster"
        android:layout_toRightOf="@+id/poster"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/overview_value" />

</RelativeLayout>